personal.css
@font-face {
  font-family: "Rock Salt";
  src: url(http://fonts.googleapis.com/css?family=Rock Salt);
  font-family: "Lato";
  src: url(http://fonts.googleapis.com/css?family=Lato);
}
body {
  margin: 0;
  width: 100%;
}

img {
  max-width: 100%;
  height: auto;
}

.header {
  height: 60px;
  padding-top: 15px;
  background-color: #989898;
  position: fixed;
  width: 100%;
  z-index: 3;
}

.header li {
  display: inline;
  float: left;
  position: relative;
  padding-right: 30px;
  text-transform: uppercase;
}

h1 {
  font-family: "Rock Salt" "Arial";
  font-size: 28px;
  text-align: center;
  letter-spacing: 2px;
  margin: 0px;
  padding: 60px 0px 20px 0px;
}
h2 {
  font-family: "Lato" "Arial" sans-serif;
  text-size: 22px;
  text-transform: uppercase;
  text-align: center;
}
h3 {
  font-family: "Rock Salt" "Arial";
  font-size: 28px;
  text-align: center;
  letter-spacing: 5px;
  color: white;
  margin: 0px;
  padding: 60px 0px 20px 0px;
}
p {
  font-family: "Lato" "Arial" sans-serif;
  font-size: 20px;
  line-height: 1.78;
}
iframe {
  width: 100%;
  height: auto;
}
a:link, a:visited {
  font-family: "Arial" sans-serif;
  color: white;
  text-decoration: none;
  letter-spacing: 1px;
  border-bottom: 2px solid #E6A9EC;
}
a:hover {
  text-decoration: none;
  border-bottom: 4px solid #E6A9EC;
}

.introtext a {
  font-family: "Lato" "Arial" sans-serif;
  color: black;
  text-decoration: none;
  letter-spacing: 0px;
  border-bottom: 2px solid #E6A9EC;
}
.introtext a:hover {
  text-decoration: none;
  border-bottom: 4px solid #E6A9EC;
}

.littlerecstext a {
  font-family: "Lato" "Arial" sans-serif;
  color: white;
  text-decoration: none;
  border-bottom: 2px solid #E6A9EC;
}
.littlerecstext a:hover {
  text-decoration: none;
  border-bottom: 4px solid #E6A9EC;
}

.image-link {
  text-decoration: none;
}
a.image-link {
  border: 0 none;
  text-decoration: none;
}

#footer1 {
  height: 80px;
  background-color: #C0C0C0;
  padding-top: 15px;
  clear: both;
}
#footer2 {
  height: 60px;
  background-color: #989898;
  clear: both;
}
.nav {
  display: table;
  margin: 0 auto;
  max-width: 36em;
  }

.featurepic {
  height: auto;
  position: relative;
	clear: both;
	overflow: hidden;
  background-color: #F0F0F0;
}

.featurepic img {
  height: auto;
  max-width: 100%;
  position: relative;
  z-index: 1;
}

.featurepic .name {
  display: block;
  position: absolute;
  width: 100%;
  top: 30%;
  left: 0;
  z-index: 2;
  text-align: center;
  font-family: "Hind";
  font-size: 100px;
  font-style: oblique;
  color: white;
  letter-spacing: 4px;
  opacity: 0.7;
  text-transform: uppercase;
}

.section1 {
  margin: 0 auto;

  background-color: #F0F0F0;
  }

.section2 {
  margin: 0 auto;

}

.section3 {
  margin: 0 auto;

  background-color: #484848;
  clear: both;
}
.introtext {
  width: 50%;
  margin: 0 auto;
  padding-bottom: 40px;
}
.littlerecstext {
  width: 52%;
  margin: 0 auto;
  padding-bottom: 40px;
  font-size: 20px;
}

.littlerecstext img {
  width: 100%;
}

.main {
  background-color: #F0F0F0;
}

.row {
  width: 100%;
  background-color: #C8C8C8;
}
.row2 {
  width: 100%;
  background-color: #E0E0E0;
}
.col-1-3 {
  width: 30%;
  float: left;
  margin: 1.66%;
}
.col-1-3 p {
  font-size: 18px;
}
.col-1-4 {
  width: 25%;
  height: 300px;
  float: left;
  background-color: #F0F0F0;
}
.col-1-2 {
  width: 50%;
  height: 300px;
  float: left;
  background-color: #F0F0F0;
}
.col-1-2-foot {
  width: 46%;
  height: 80px;
  float: left;
  background-color: #C0C0C0;
}
.footerlogos {
  display: table;
  margin: 0 auto;
}
.footerlogos a:hover {
  text-decoration: none;
}
.footersvg {
  fill: #000000;
}
.footersvg:hover {
  fill: #E238EC;
}
.footermail {
  display: table;
  margin: 0 auto;
  padding-top: 22px;
}
@media (max-width: 920px) {
  .introtext {
    width: 60%;
  }
  .col-1-3 p {
    font-size: 16px;
  }
  .littlerecstext {
    width: 70%;
  }
}

@media (max-width: 768px) {
  .introtext {
    width: 60%;
  }
  .col-1-3 {
    width: 50%;
    margin: 0 auto;
    float: none;
    padding-bottom: 40px;
  }
  .col-1-3 p {
    font-size: 18px;
  }
  .littlerecstext {
    width: 70%;
  }
}

@media (max-width: 414px) {
  body {
    min-width: 980px;
  }
  p {
    font-size: 23px;
  }
  .col-1-3 p {
    font-size: 23px;
  }
  .introtext {
    width: 85%;
  }
  .col-1-3 {
    width: 74%;
    margin: 0 auto;
    float: none;
    padding-bottom: 40px;
  }
  .littlerecstext {
    width: 85%;
  }
  .littlerecstext a {
    font-size: 23px;
  }
}

